--- a/Reports/HTMLReports/extent_test_report.html
+++ b/Reports/HTMLReports/extent_test_report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Cucumber Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar. 27, 2023 09:17:22 a.m.</span></a>
+<a href="#"><span class="badge badge-primary">Mar. 27, 2023 10:41:18 a.m.</span></a>
 </li>
 </ul>
 </div>
@@ -106,7 +106,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tablet"></i></a>
 <ul id="device-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">Chrome</a><a class="dropdown-item" href="#">Edge</a><a class="dropdown-item" href="#">Firefox</a>
+<a class="dropdown-item" href="#">Chrome</a><a class="dropdown-item" href="#">Firefox</a><a class="dropdown-item" href="#">Edge</a>
 </ul>
 </li>
 </ul>
@@ -119,7 +119,7 @@
           <div class="test-detail">
             <p class="name">Selenium Web UI Testing</p>
             <p class="text-sm">
-              <span>9:17:23 a.m.</span> / <span>00:00:45:734</span>
+              <span>10:41:18 a.m.</span> / <span>00:00:42:477</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -128,9 +128,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Selenium Web UI Testing</h5>
-<span class='badge badge-success'>03.27.2023 9:17:23 a.m.</span>
-<span class='badge badge-danger'>03.27.2023 9:18:09 a.m.</span>
-<span class='badge badge-default'>00:00:45:734</span>
+<span class='badge badge-success'>03.27.2023 10:41:18 a.m.</span>
+<span class='badge badge-danger'>03.27.2023 10:42:01 a.m.</span>
+<span class='badge badge-default'>00:00:42:477</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -354,7 +354,7 @@ Driver info: driver.version: unknown
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>09:17:43 a.m.</td>
+<td>10:41:37 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='15'>And I add "Sauce Labs Bike Light 1" to my cart</a>
 <div class="">
@@ -408,7 +408,7 @@ Driver info: driver.version: unknown
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:23 a.m.</td>
+<td>10:41:18 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='3'>Chrome Online Shopping</a>
 <div class="">
@@ -418,7 +418,7 @@ Driver info: driver.version: unknown
 </tr>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>09:17:36 a.m.</td>
+<td>10:41:31 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='12'>Firefox Online Shopping</a>
 <div class="">
@@ -428,7 +428,7 @@ Driver info: driver.version: unknown
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:56 a.m.</td>
+<td>10:41:49 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='21'>Edge Online Shopping</a>
 <div class="">
@@ -480,47 +480,11 @@ Driver info: driver.version: unknown
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:23 a.m.</td>
+<td>10:41:18 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='3'>Chrome Online Shopping</a>
 <div class="">
 <span class="badge badge-default">Selenium Web UI Testing.Chrome Online Shopping</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>1</span>
-</span>
-<p class="name">Edge</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>Edge</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:56 a.m.</td>
-<td>
-<a href="#" class="linked" test-id='1' id='21'>Edge Online Shopping</a>
-<div class="">
-<span class="badge badge-default">Selenium Web UI Testing.Edge Online Shopping</span>
 </div>
 </td>
 </tr>
@@ -552,11 +516,47 @@ Driver info: driver.version: unknown
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>09:17:36 a.m.</td>
+<td>10:41:31 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='12'>Firefox Online Shopping</a>
 <div class="">
 <span class="badge badge-default">Selenium Web UI Testing.Firefox Online Shopping</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+</span>
+<p class="name">Edge</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>Edge</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>10:41:49 a.m.</td>
+<td>
+<a href="#" class="linked" test-id='1' id='21'>Edge Online Shopping</a>
+<div class="">
+<span class="badge badge-default">Selenium Web UI Testing.Edge Online Shopping</span>
 </div>
 </td>
 </tr>
@@ -606,7 +606,7 @@ Driver info: driver.version: unknown
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:23 a.m.</td>
+<td>10:41:18 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='3'>Chrome Online Shopping</a>
 <div class="">
@@ -616,7 +616,7 @@ Driver info: driver.version: unknown
 </tr>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>09:17:36 a.m.</td>
+<td>10:41:31 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='12'>Firefox Online Shopping</a>
 <div class="">
@@ -626,7 +626,7 @@ Driver info: driver.version: unknown
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:56 a.m.</td>
+<td>10:41:49 a.m.</td>
 <td>
 <a href="#" class="linked" test-id='1' id='21'>Edge Online Shopping</a>
 <div class="">
@@ -651,13 +651,13 @@ Driver info: driver.version: unknown
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar. 27, 2023 09:17:22 a.m.</h3>
+<h3>Mar. 27, 2023 10:41:18 a.m.</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar. 27, 2023 09:18:09 a.m.</h3>
+<h3>Mar. 27, 2023 10:42:01 a.m.</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -747,7 +747,7 @@ Driver info: driver.version: unknown
 </div></div>
 <script>
 var timeline = {
-"Selenium Web UI Testing":45.734
+"Selenium Web UI Testing":42.477
 };
 </script>
 <div class="row">
@@ -801,20 +801,20 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>Edge</td>
-<td>1</td>
-<td>0</td>
-<td>0</td>
-<td>0</td>
-<td>100%</td>
-</tr>
-<tr>
 <td>Firefox</td>
 <td>0</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
 <td>0%</td>
+</tr>
+<tr>
+<td>Edge</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100%</td>
 </tr>
 </tbody>
 </table></div>
